--- a/index.html
+++ b/index.html
@@ -78,11 +78,6 @@
                         ><span>$CST</span></a
                       >
                     </li>
-                    <li>
-                      <a class="scrollspy-btn" href="#roadmap"
-                        ><span>Road Map</span></a
-                      >
-                    </li>
                  
                     <li>
                       <a class="scrollspy-btn" href="#features"
@@ -97,66 +92,28 @@
                       <div class="xb-menu-close xb-hide-xl xb-close"></div>
                       <div class="xb-logo-mobile xb-hide-xl">
                         <a href="index.html" rel="home"
-                          ><img src="assets/img/logo/logo.svg" alt=""
+                          ><img src="assets/img/logo/coinlogo.png" alt="" width="75px" height="200px"
                         /></a>
-                      </div>
-                      <div class="xb-header-mobile-search xb-hide-xl">
-                        <form role="search" action="#">
-                          <input
-                            type="text"
-                            placeholder="Search..."
-                            name="s"
-                            class="search-field"
-                          />
-                        </form>
                       </div>
                       <nav class="xb-header-nav">
                         <ul class="xb-menu-primary clearfix">
-                          <li class="menu-item menu-item-has-children">
-                            <a href="index.html"><span>Home</span></a>
-                            <ul class="sub-menu">
-                              <li class="menu-item">
-                                <a href="index.html"
-                                  ><span>ICO Investment</span></a
-                                >
-                              </li>
-                              <li class="menu-item">
-                                <a href="home-2.html"
-                                  ><span>Crypto Exchange</span></a
-                                >
-                              </li>
-                            </ul>
+                          <li class="menu-item ">
+                            <a href="index.html"><span>Anasayfa</span></a>
                           </li>
                           <li class="menu-item">
-                            <a class="scrollspy-btn" href="#chart"
-                              ><span>Ico Chart</span></a
+                            <a class="scrollspy-btn" href="#about"
+                              ><span>Coin Social Nedir?</span></a
                             >
                           </li>
                           <li class="menu-item">
-                            <a class="scrollspy-btn" href="#roadmap"
-                              ><span>Roadmap</span></a
+                            <a class="scrollspy-btn" href="#chart"
+                              ><span>$CST</span></a
                             >
                           </li>
                           <li class="menu-item">
                             <a class="scrollspy-btn" href="#features"
-                              ><span>Features</span></a
+                              ><span>Hizmetler</span></a
                             >
-                          </li>
-                          <li class="menu-item menu-item-has-children">
-                            <a href="#!"><span>Blog</span></a>
-                            <ul class="sub-menu">
-                              <li>
-                                <a href="blog.html"><span>Blog</span></a>
-                              </li>
-                              <li>
-                                <a href="blog-single.html"
-                                  ><span>Blog Details</span></a
-                                >
-                              </li>
-                            </ul>
-                          </li>
-                          <li class="menu-item">
-                            <a href="contact.html"><span>Contact</span></a>
                           </li>
                         </ul>
                       </nav>
@@ -294,7 +251,7 @@
               </div>
             </div>
             <div class="hero-scroll pt-105">
-              <span>scroll to down</span>
+              <span>Aşağı Kaydırın</span>
               <div class="scroll-down text-center">
                 <div class="chevron"></div>
                 <div class="chevron"></div>
@@ -306,7 +263,7 @@
         <!-- hero section end  -->
 
         <!-- partners section start  -->
-        <section class="partners z-3 pt-135">
+        <section class="partners z-3 pt-105">
         </section>
         <!-- partners section end  -->
 
@@ -772,8 +729,8 @@
                 <div class="feature-wrap ul_li">
                   <div class="xb-item--holder">
                     <h2 class="xb-item--title">Kripto Proje Hizmetleri</h2>
-                    <p class="xb-item--content">
-                      <ul>
+                    <p class="xb-item--content" >
+                      <ul class="ul-xb">
                         <li>Token Çıkartma & Akıllı Kontrat Geliştirme
                         </li>
                         <li>
@@ -801,7 +758,7 @@
                       Dijital Pazarlama & Medya Hizmetleri
                     </h2>
                     <p class="xb-item--content">
-                         <ul>
+                         <ul class="ul-xb">
                         <li>Web Sitesi & Landing Page Tasarımı
                         </li>
                         <li>
@@ -827,7 +784,7 @@
                   <div class="xb-item--holder">
                     <h2 class="xb-item--title">Özel VIP Hizmetler & Danışmanlık</h2>
                     <p class="xb-item--content">
-                       <ul>
+                       <ul class="ul-xb">
                         <li>VIP Transfer & Lüks Ulaşım Hizmetleri 
                         </li>
                         <li>
