--- a/index.html
+++ b/index.html
@@ -983,64 +983,66 @@ yaparak kazanç elde etmeleri
       <!-- main area end  -->
 
       <!-- footer strt -->
-      <footer
-        class="footer bg_img pos-rel mt-110"
-        data-background="assets/img/bg/footer-bg.png"
-      >
+      <footer class="footer bg_img pos-rel mt-110" data-background="assets/img/bg/footer-bg.png">
         <div class="container">
-          <div class="xb-footer-bottom">
-        <!-- Logo added at the top -->
-        <div class="footer-logo text-center mb-40">
-          <img src="assets/img/logo/coinlogo.png" alt="Logo" style="width: 150px;">
+          <div class="xb-footer-bottom"></div>
+            <!-- Logo -->
+            <div class="footer-logo text-center mb-40">
+              <img src="assets/img/logo/coinlogo.png" alt="Logo" style="max-width: 150px; width: 100%;">
+            </div>
+
+            <div class="xb-footer-wrap">
+              <!-- Navigation Links -->
+              <div class="xb-item--footer_widget mb-30">
+                <ul class="xb-item--footer_widget-list" style="display: flex; flex-direction: column; align-items: center; gap: 15px; padding: 0 15px;">
+                  <li><a href="#!" style="padding: 5px 10px; display: block;">Anasayfa</a></li>
+                  <li><a href="#!" style="padding: 5px 10px; display: block;">Coin Social Nedir ?</a></li>
+                  <li><a href="#!" style="padding: 5px 10px; display: block;">$CST</a></li>
+                  <li><a href="#!" style="padding: 5px 10px; display: block;">Hizmetler</a></li>
+                </ul>
+              </div>
+
+              <!-- Social Media Icons -->
+              <div class="xb-item--footer_widget mb-30">
+                <ul class="ul_li xb-item--social-link" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; padding: 0 15px;">
+                  <li>
+                    <a href="#!" style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center;">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#!" style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center;">
+                      <i class="fab fa-linkedin-in"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#!" style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center;">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#!" style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center;">
+                      <i class="fab fa-telegram-plane"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <!-- Copyright -->
+            <div class="footer-copyright text-center" style="padding: 15px; font-size: 14px;">
+              Copyright © 2025 Cointech. All rights reserved.
+            </div>
+          </div>
         </div>
 
-        <div class="xb-footer-wrap" style="display: flex; flex-direction: column; align-items: center;">
-          <div class="xb-item--footer_widget mb-30">
-            <ul class="xb-item--footer_widget-list" style="display: flex; justify-content: center; gap: 30px;">
-          <li><a href="#!">Anasayfa</a></li>
-          <li><a href="#!">Coin Social Nedir ?</a></li>
-          <li><a href="#!">$CST</a></li>
-          <li><a href="#!">Hizmetler</a></li>
-            </ul>
-          </div>
-          <div class="xb-item--footer_widget mb-30">
-            <ul class="ul_li xb-item--social-link" style="justify-content: center; gap: 20px;">
-          <li>
-            <a href="#!"><i class="fab fa-facebook-f"></i></a>
-          </li>
-          <li>
-            <a href="#!"><i class="fab fa-linkedin-in"></i></a>
-          </li>
-          <li>
-            <a href="#!"><i class="fab fa-instagram"></i></a>
-          </li>
-          <li>
-            <a href="#!"><i class="fab fa-telegram-plane"></i></a>
-          </li>
-            </ul>
-          </div>
-        </div>
-        <div class="footer-copyright text-center">
-          Copyright © 2025 Cointech. All rights reserved.
-        </div>
-          </div>
-        </div>
+        <!-- Shapes -->
         <div class="footer-shape">
-          <div class="shape shape--1">
-        <img
-          class="leftToRight"
-          src="assets/img/shape/team-sp_01.svg"
-          alt=""
-          width="100"
-          height="100"
-        />
+          <div class="shape shape--1"></div>
+            <img class="leftToRight" src="assets/img/shape/team-sp_01.svg" alt="" style="max-width: 100%; height: auto;">
           </div>
           <div class="shape shape--2">
-        <img
-          class="topToBottom"
-          src="assets/img/shape/team-sp_02.svg"
-          alt=""
-        />
+            <img class="topToBottom" src="assets/img/shape/team-sp_02.svg" alt="" style="max-width: 100%; height: auto;">
           </div>
         </div>
       </footer>
