--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
               </div>
               
                               <div class="table-responsive">
-                                <h1 style="text-align: center; color: #fff; margin-bottom: 30px;">STAKE LİSANS MARKETİNG PLAN</h1>
+                                <h1 style="text-align: center; color: #fff; margin-bottom: 30px;margin-top: 30px;">STAKE LİSANS MARKETİNG PLAN</h1>
                   <table>
                     <thead>
                       <tr>
@@ -866,10 +866,27 @@
                   </table>
                 </div>
             </div>
+             <a class="them-btn" style="margin-top: 30px;" href="contact.html">
+                  <span class="btn_label" data-text="Ön Satışa Katıl"
+                    >Ön Satışa Katıl</span
+                  >
+                  <span class="btn_icon">
+                    <svg
+                      width="15"
+                      height="14"
+                      viewBox="0 0 15 14"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M14.434 0.999999C14.434 0.447714 13.9862 -8.61581e-07 13.434 -1.11446e-06L4.43396 -3.13672e-07C3.88168 -6.50847e-07 3.43396 0.447715 3.43396 0.999999C3.43396 1.55228 3.88168 2 4.43396 2L12.434 2L12.434 10C12.434 10.5523 12.8817 11 13.434 11C13.9862 11 14.434 10.5523 14.434 10L14.434 0.999999ZM2.14107 13.7071L14.1411 1.70711L12.7269 0.292893L0.726853 12.2929L2.14107 13.7071Z"
+                        fill="white"
+                      ></path>
+                    </svg>
+                  </span>
+                </a>
           </div>
-          <div class="feature-shape align-items-center">
-            <img src="assets/img/feature/fea-color-sp.png" alt="" />
-          </div>
+          
         </section>
         <!-- feature section end -->
       </main>
@@ -1131,6 +1148,111 @@ yaparak kazanç elde etmeleri
             </div>
           </div> 
 </section>
+           <!-- faq start -->
+            <section class="faq pt-130">
+                <div class="container">
+                    <div class="section-title pb-55 wow fadeInUp"  data-wow-duration=".7s">
+                        <h1 class="title">Sıkça Sorulan Sorular</h1>
+                    </div>
+                    <div class="faq__blockchain wow fadeInUp" data-wow-duration=".7s" data-wow-delay="200ms">
+                        <ul class="accordion_box clearfix">
+                            <li class="accordion block">
+                                <div class="acc-btn">
+                                    CST Token Nedir?
+                                    <span class="arrow"><span></span></span>
+                                </div>
+                                <div class="acc_body">
+                                    <div class="content">
+                                       CST Token, Coin Social ekosisteminin temel para birimidir. Ön satış sürecinde yatırımcılar için avantajlı fiyatlarla sunulmaktadır ve platform içinde ödeme, staking ve ödüller için kullanılacaktır.
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="accordion block active-block">
+                                <div class="acc-btn">
+                                    CST Token Ön Satışı Ne Zaman Bitecek?
+                                    <span class="arrow"><span></span></span>
+                                </div>
+                                <div class="acc_body current">
+                                    <div class="content">
+                                       Ön satış süreci, belirlenen token arzı tükendiğinde veya planlanan süre tamamlandığında sona erecektir. Ön satışta yer almak için erken yatırım yapmanız önerilir. 
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="accordion block">
+                                <div class="acc-btn">
+                                    CST Token’lerimi Ne Zaman Alacağım?
+                                    <span class="arrow"><span></span></span>
+                                </div>
+                                <div class="acc_body">
+                                    <div class="content">
+                                      Ön satış tamamlandıktan sonra CST Token’ler, belirtilen tarihte yatırımcıların cüzdanlarına dağıtılacaktır. Detaylı dağıtım planı için Whitepaper’a Göz Atın.
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="accordion block">
+                                <div class="acc-btn">
+                                    CST Token Hangi Borsalarda Listelenecek?
+                                    <span class="arrow"><span></span></span>
+                                </div>
+                                <div class="acc_body">
+                                    <div class="content">
+                                       Ön satış tamamlandıktan sonra ilk olarak PancakeSwap’ta listelenecek, ardından merkezi borsalarda (CEX) işlem görmesi için çalışmalar devam edecektir.
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="accordion block">
+                                <div class="acc-btn">
+                                   CST Token Stake Ederek Pasif Gelir Elde Edebilir Miyim?
+                                    <span class="arrow"><span></span></span>
+                                </div>
+                                <div class="acc_body">
+                                    <div class="content">
+                                       Evet! CST Token’lerinizi belirli süreliğine stake ederek aylık pasif gelir elde edebilirsiniz.
+                                       <br/>
+
+📌 Staking Seçenekleri & Getiriler: <br/>
+
+🥈 Silver Plan: $250 → 30.000 CST Stake Hakkı <br/> 
+🥇 Gold Plan: $500 → 80.000 CST Stake Hakkı <br/>
+💎 Platinum Plan: $1000 → 180.000 CST Stake Hakkı <br/>
+📌 Ödüller: <br/>
+
+🔹 2 Yıl Staking → Aylık %2 Getiri <br/>
+🔹 3 Yıl Staking → Aylık %2.5 Getiri <br/>
+🔹 4 Yıl Staking → Aylık %3 Getiri <br/>
+                                    </div>
+                                </div>
+                            </li>
+                            <!-- <li class="accordion block">
+                                <div class="acc-btn">
+                                    Is there a minimum investment requirement?
+                                    <span class="arrow"><span></span></span>
+                                </div>
+                                <div class="acc_body">
+                                    <div class="content">
+                                        An ICO, or Initial Coin Offering, is a fundraising method used by cryptocurrency and blockchain projects to raise capital by issuing tokens to investors. In an ICO, investors purchase these tokens with cryptocurrencies or fiat currencies in exchange for a stake to its products or services.
+                                    </div>
+                                </div>
+                            </li> -->
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <!-- faq end -->
+              <div class="team-shape">
+                <div class="shape shape--1">
+                    <img class="leftToRight" src="assets/img/shape/team-sp_01.svg" alt="">
+                </div>
+                <div class="shape shape--2">
+                    <img class="topToBottom" src="assets/img/shape/team-sp_02.svg" alt="">
+                </div>
+                <div class="shape shape--3">
+                    <img class="leftToRight" src="assets/img/shape/team-sp_03.svg" alt="">
+                </div>
+                <div class="shape shape--4">
+                    <img class="topToBottom" src="assets/img/shape/team-sp_04.svg" alt="">
+                </div>
+            </div>
       <!-- footer strt -->
       <footer class="footer bg_img pos-rel mt-110" data-background="assets/img/bg/footer-bg.png">
         <div class="container">
