--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 </h1>
               </div>
               <div class="fadeInUp mt-60" style="text-align: center;">
-                Coin Social ekosisteminin merkezi olan CST Token, erken yatırımcılar için özel avantajlarla satışta! Erken alım fırsatlarından yararlanarak yatırımını büyüt!
+                Coin Social ekosisteminin merkezi olan CST Token, erken yatırımcılar için özel avantajlarla satışta! <br/> Erken alım fırsatlarından yararlanarak yatırımını büyüt!
               </div>
               <div
                 class="hero__btn btns pt-50 wow fadeInUp"
