--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </li>
                        <li>
                       <a class="scrollspy-btn" href="#about"
-                        ><span>Coin Social Nedir ?</span></a
+                        ><span>Neden $CST ?</span></a
                       >
                     </li>
                         <li>
@@ -81,7 +81,7 @@
                  
                     <li>
                       <a class="scrollspy-btn" href="#features"
-                        ><span>Hizmetler</span></a
+                        ><span>Stake Lisans Seçenekleri</span></a
                       >
                     </li>
                   </ul>
@@ -102,7 +102,7 @@
                           </li>
                           <li class="menu-item">
                             <a class="scrollspy-btn" href="#about"
-                              ><span>Coin Social Nedir?</span></a
+                              ><span>Neden $CST ?</span></a
                             >
                           </li>
                           <li class="menu-item">
@@ -112,7 +112,7 @@
                           </li>
                           <li class="menu-item">
                             <a class="scrollspy-btn" href="#features"
-                              ><span>Hizmetler</span></a
+                              ><span>Stake Lisans Hizmetleri</span></a
                             >
                           </li>
                         </ul>
@@ -1267,9 +1267,9 @@ yaparak kazanç elde etmeleri
               <div class="xb-item--footer_widget mb-30">
                 <ul class="xb-item--footer_widget-list" style="display: flex; flex-direction: column; align-items: center; gap: 15px; padding: 0 15px;">
                   <li><a href="#!" style="padding: 5px 10px; display: block;">Anasayfa</a></li>
-                  <li><a href="#!" style="padding: 5px 10px; display: block;">Coin Social Nedir ?</a></li>
+                  <li><a href="#!" style="padding: 5px 10px; display: block;">Neden $CST</a></li>
                   <li><a href="#!" style="padding: 5px 10px; display: block;">$CST</a></li>
-                  <li><a href="#!" style="padding: 5px 10px; display: block;">Hizmetler</a></li>
+                  <li><a href="#!" style="padding: 5px 10px; display: block;">Stake Lisans Seçenekleri</a></li>
                 </ul>
               </div>
 
