meta codes fixed

--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <!--========= Required meta tags =========-->
-    <meta charset="utf-8" />
+<meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="description" content="" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Coin Tech Social, blockchain tabanlı merkeziyetsiz sosyal medya ekosistemidir. CST Token ile kazanç sağlayın, staking yapın ve Web3 dünyasına katılın!" />
+    <meta name="keywords" content="Coin Tech Social, CST Token, blockchain, staking, Web3, merkeziyetsiz sosyal medya, kripto para, DeFi, NFT" />
+    <meta name="author" content="Coin Tech Social" />
 
-    <title>Cryco - ICO & Crypto Landing HTML Template</title>
+    <!-- Social Media Meta Tags -->
+    <meta property="og:title" content="Coin Tech Social | Web3 Tabanlı Sosyal Medya Ekosistemi" />
+    <meta property="og:description" content="CST Token ön satışta! Blockchain ile desteklenen merkeziyetsiz sosyal medya platformuna katılın ve kazanç sağlayın." />
+    <meta property="og:image" content="https://www.cointechsocial.com/assets/img/social-preview.png" />
+    <meta property="og:url" content="https://www.cointechsocial.com" />
+    <meta property="og:type" content="website" />
 
-    <link
-      rel="shortcut icon"
-      href="assets/img/favicon.png"
-      type="images/x-icon"
-    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Coin Tech Social | Web3 Tabanlı Sosyal Medya Ekosistemi" />
+    <meta name="twitter:description" content="CST Token ön satışta! Blockchain ile desteklenen merkeziyetsiz sosyal medya platformuna katılın ve kazanç sağlayın." />
+    <meta name="twitter:image" content="https://www.cointechsocial.com/assets/img/social-preview.png" />
+    <meta name="twitter:site" content="@cointechsocial" />
+
+    <!-- Responsive Design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+    <title>Coin Tech Social | Web3 Tabanlı Sosyal Medya Ekosistemi</title>
+
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
 
     <!-- css include -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -84,6 +95,11 @@
                         ><span>Stake Lisans Seçenekleri</span></a
                       >
                     </li>
+                     <li>
+                      <a class="scrollspy-btn" href="#faq"
+                        ><span>Sıkça Sorular Sorular</span></a
+                      >
+                    </li>
                   </ul>
                 </nav>
                 <div class="xb-header-wrap">
@@ -113,6 +129,11 @@
                           <li class="menu-item">
                             <a class="scrollspy-btn" href="#features"
                               ><span>Stake Lisans Hizmetleri</span></a
+                            >
+                          </li>
+                            <li class="menu-item">
+                            <a class="scrollspy-btn" href="#faq"
+                              ><span>Sıkça Sorulan Sorular</span></a
                             >
                           </li>
                         </ul>
@@ -207,7 +228,7 @@
                 data-wow-duration=".7s"
                 data-wow-delay="350ms"
               >
-                <a class="them-btn" href="contact.html">
+                <a class="them-btn" href="#!">
                   <span class="btn_label" data-text="Ön Satışa Katıl"
                     >Ön Satışa Katıl</span
                   >
@@ -226,7 +247,7 @@
                     </svg>
                   </span>
                 </a>
-                <a href="contact.html" class="them-btn btn-transparent">
+                <a href="#!" class="them-btn btn-transparent">
                   <span class="btn_label" data-text="Whitepaper'ı Oku"
                     >Whitepaper'ı Oku</span
                   >
@@ -606,7 +627,7 @@
                 data-wow-duration=".7s"
                 data-wow-delay="350ms"
               >
-                <a class="them-btn" href="contact.html">
+                <a class="them-btn" href="#!">
                   <span class="btn_label" data-text="Ön Satışa Katıl"
                     >Ön Satışa Katıl</span
                   >
@@ -866,7 +887,7 @@
                   </table>
                 </div>
             </div>
-             <a class="them-btn" style="margin-top: 30px;" href="contact.html">
+             <a class="them-btn" style="margin-top: 30px;" href="#!"">
                   <span class="btn_label" data-text="Ön Satışa Katıl"
                     >Ön Satışa Katıl</span
                   >
@@ -1149,7 +1170,7 @@ yaparak kazanç elde etmeleri
           </div> 
 </section>
            <!-- faq start -->
-            <section class="faq pt-130">
+            <section id="faq" class="faq pt-130">
                 <div class="container">
                     <div class="section-title pb-55 wow fadeInUp"  data-wow-duration=".7s">
                         <h1 class="title">Sıkça Sorulan Sorular</h1>
@@ -1265,7 +1286,7 @@ yaparak kazanç elde etmeleri
             <div class="xb-footer-wrap">
               <!-- Navigation Links -->
               <div class="xb-item--footer_widget mb-30">
-                <ul class="xb-item--footer_widget-list" style="display: flex; flex-direction: column; align-items: center; gap: 15px; padding: 0 15px;">
+                <ul class="xb-item--footer_widget-list">
                   <li><a href="#!" style="padding: 5px 10px; display: block;">Anasayfa</a></li>
                   <li><a href="#!" style="padding: 5px 10px; display: block;">Neden $CST</a></li>
                   <li><a href="#!" style="padding: 5px 10px; display: block;">$CST</a></li>
