--- a/index.html
+++ b/index.html
@@ -5,29 +5,21 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Coin Tech Social, blockchain tabanlı merkeziyetsiz sosyal medya ekosistemidir. CST Token ile kazanç sağlayın, staking yapın ve Web3 dünyasına katılın!" />
-    <meta name="keywords" content="Coin Tech Social, CST Token, blockchain, staking, Web3, merkeziyetsiz sosyal medya, kripto para, DeFi, NFT" />
-    <meta name="author" content="Coin Tech Social" />
+    <meta name="description" content="Meydan App, blockchain tabanlı merkeziyetsiz sosyal medya ekosistemidir. MAT Token ile görev yaparak kazanç sağlayın, staking yapın ve Web3 dünyasına katılın!" />
+    <meta name="keywords" content="Meydan App, MAT Token, blockchain, staking, Web3, merkeziyetsiz sosyal medya, kripto para, DeFi, NFT, görev yap kazan" />
+    <meta name="author" content="Meydan App" />
 
     <!-- Social Media Meta Tags -->
-    <meta property="og:title" content="Coin Tech Social | Web3 Tabanlı Sosyal Medya Ekosistemi" />
-    <meta property="og:description" content="CST Token ön satışta! Blockchain ile desteklenen merkeziyetsiz sosyal medya platformuna katılın ve kazanç sağlayın." />
-    <meta property="og:image" content="https://www.cointechsocial.com/assets/img/social-preview.png" />
-    <meta property="og:url" content="https://www.cointechsocial.com" />
+    <meta property="og:title" content="Meydan App | Görev Yap Kazan: Web3’te Yeni Bir Devrim" />
+    <meta property="og:description" content="MAT Token ön satışta! Blockchain ile desteklenen merkeziyetsiz sosyal medya platformuna katılın ve kazanç sağlayın." />
     <meta property="og:type" content="website" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Coin Tech Social | Web3 Tabanlı Sosyal Medya Ekosistemi" />
-    <meta name="twitter:description" content="CST Token ön satışta! Blockchain ile desteklenen merkeziyetsiz sosyal medya platformuna katılın ve kazanç sağlayın." />
-    <meta name="twitter:image" content="https://www.cointechsocial.com/assets/img/social-preview.png" />
-    <meta name="twitter:site" content="@cointechsocial" />
 
     <!-- Responsive Design -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>Coin Tech Social | Web3 Tabanlı Sosyal Medya Ekosistemi</title>
+    <title>Meydan App | Web3 Tabanlı Sosyal Medya Ekosistemi</title>
 
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
 
     <!-- css include -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -1219,87 +1211,98 @@ yaparak kazanç elde etmeleri
         </div>
       </div>
       <div class="row gy-4 justify-content-between">
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-2 col-md-6">
           <div class="team-card">
             <div class="image-fram">
               <a href="javascript:void(0)">
-                <img src="https://up2client.com/envato/proteam/html/preview/Grid-layout/assets/images/layout-22/images2.jpg" alt="image" />
+                <img src="assets/img/team/furkanakgun.jpg" alt="image" />
                 <div class="mil-team-circle"></div>
               </a>
             </div>
             <div class="team-detail">
               <a href="javascript:void(0)">Furkan Akgün</a>
-              <span>Kripto topluluğu lider,Network uzmanı</span>
+              <span>Kripto topluluğu lideri <br> Network uzmanı</span>
             </div>
             <div class="social">
-              <a href="https://facebook.com/" target="_blank">
+              <a href="https://www.facebook.com/furkanakgun.net" target="_blank">
                 <i class="fab fa-facebook-f"></i>
               </a>
-              <a href="https://instagram.com/" target="_blank">
+              <a href="https://www.instagram.com/furkanakgunonline/" target="_blank">
                 <i class="fab fa-instagram"></i>
               </a>
-              <a href="https://linkedin.com/" target="_blank">
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-              <a href="https://twitter.com/" target="_blank">
+              <a href="https://x.com/cryptofurkan_?s=21" target="_blank">
                 <i class="fab fa-twitter"></i>
               </a>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-2 col-md-6">
           <div class="team-card">
             <div class="image-fram">
               <a href="javascript:void(0)">
-                <img src="https://pbs.twimg.com/profile_images/1110919314885013509/K_5ToEdn_400x400.jpg" alt="image" />
+                <img src="assets/img/team/muratsakaoglu.jpg" alt="image" />
                 <div class="mil-team-circle"></div>
               </a>
             </div>
             <div class="team-detail">
               <a href="javascript:void(0)">Murat Sakaoğlu</a>
-              <span>Influencer,Viral Medya Uzmanı</span>
+              <span>Influencer <br> Viral Medya Uzmanı</span>
             </div>
             <div class="social">
-              <a href="https://facebook.com/" target="_blank">
-                <i class="fab fa-facebook-f"></i>
+              <a href="https://youtube.com/@muratsakaoglu4342?si=LPFD_fbwpM1FDM_9" target="_blank">
+                <i class="fab fa-youtube"></i>
               </a>
-              <a href="https://instagram.com/" target="_blank">
+              <a href="https://www.instagram.com/muratsakaoglu" target="_blank">
                 <i class="fab fa-instagram"></i>
-              </a>
-              <a href="https://linkedin.com/" target="_blank">
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-              <a href="https://twitter.com/" target="_blank">
-                <i class="fab fa-twitter"></i>
               </a>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-2 col-md-6">
           <div class="team-card">
             <div class="image-fram">
               <a href="javascript:void(0)">
-                <img src="https://up2client.com/envato/proteam/html/preview/Grid-layout/assets/images/layout-22/images2.jpg" alt="image" />
+                <img src="assets/img/team/hasan.jpg" alt="image" />
                 <div class="mil-team-circle"></div>
               </a>
             </div>
             <div class="team-detail">
-              <a href="javascript:void(0)">Danışmanlar</a>
+              <a href="javascript:void(0)">Hasan Karamustafaoğlu</a>
               <span>Danışman</span>
             </div>
             <div class="social">
-              <a href="https://www.facebook.com/" target="_blank">
-                <i class="ri-facebook-fill"></i>
+                <a href="https://www.instagram.com/hasan_karamustafaoglu_" target="_blank">
+                <i class="fab fa-instagram"></i>
+                </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6">
+          <div class="team-card">
+            <div class="image-fram">
+              <a href="javascript:void(0)">
+                <img src="assets/img/team/yunusakkan.jpg" alt="image" />
+                <div class="mil-team-circle"></div>
               </a>
-              <a href="https://www.instagram.com/" target="_blank">
-                <i class="ri-instagram-line"></i>
+            </div>
+            <div class="team-detail">
+              <a href="javascript:void(0)">Yunus Akkan</a>
+              <span style="height: 55px; display: block;">Info</span>
+            </div>
+          </div>
+        </div>
+   
+        <div class="col-lg-2 col-md-6">
+          <div class="team-card">
+            <div class="image-fram">
+              <a href="javascript:void(0)">
+                <img src="assets/img/team/sirac.jpg" alt="image" />
+                <div class="mil-team-circle"></div>
               </a>
-              <a href="https://www.linkedin.com/" target="_blank">
-                <i class="ri-linkedin-fill"></i>
-              </a>
-              <a href="https://twitter.com/" target="_blank">
-                <i class="ri-twitter-x-fill"></i>
-              </a>
+            </div>
+            <div class="team-detail">
+              <a href="javascript:void(0)">Siraç Alan</a>
+              <span style="height: 55px; display: block;">Teknik</span>
             </div>
           </div>
         </div>
