telegram and whitepaper added

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   </svg>
                 </span>
               </a>
-                <a class="them-btn" href="#!">
+                <a class="them-btn" href="https://t.me/meydanabekleriz">
                   <span class="btn_label" data-text="Telegrama Katıl"
                     >Telegrama Katıl</span
                   >
@@ -259,7 +259,7 @@
                     </svg>
                   </span>
                 </a>
-                <a href="#!" class="them-btn btn-transparent">
+                <a href="/assets/whitepaper/MAT_Token_Whitepaper_v1.1.pdf" class="them-btn btn-transparent">
                   <span class="btn_label" data-text="Whitepaper'ı Oku"
                     >Whitepaper'ı Oku</span
                   >
@@ -1394,7 +1394,7 @@ yaparak kazanç elde etmeleri
                       </svg>
                     </span>
                   </a>
-                  <a href="#!" class="them-btn btn-transparent" style="min-width: 160px;">
+                  <a href="assets/whitepaper/MAT_Token_Whitepaper_v1.1.pdf" class="them-btn btn-transparent" style="min-width: 160px;">
                     <span class="btn_label" data-text="Whitepaper">Whitepaper</span>
                     <span class="btn_icon">
                       <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1402,7 +1402,7 @@ yaparak kazanç elde etmeleri
                       </svg>
                     </span>
                   </a>
-                  <a href="https://t.me/" target="_blank" class="them-btn" style="min-width: 160px; background: #229ed9;">
+                  <a href="https://t.me/meydanabekleriz"" target="_blank" class="them-btn" style="min-width: 160px; background: #229ed9;">
                     <span class="btn_label" data-text="Telegram">Telegram</span>
                     <span class="btn_icon">
                       <i class="fab fa-telegram-plane"></i>
@@ -1455,17 +1455,12 @@ yaparak kazanç elde etmeleri
                   </a>
                 </li>
                 <li>
-                  <a href="https://linkedin.com/" target="_blank" style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center;">
-                    <i class="fab fa-linkedin-in"></i>
-                  </a>
-                </li>
-                <li>
                   <a href="https://instagram.com/" target="_blank" style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center;">
                     <i class="fab fa-instagram"></i>
                   </a>
                 </li>
                 <li>
-                  <a href="https://t.me/" target="_blank" style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center;">
+                  <a href="https://t.me/meydanabekleriz"" target="_blank" style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center;">
                     <i class="fab fa-telegram-plane"></i>
                   </a>
                 </li>
