--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   </svg>
                 </span>
               </a>
-                <a class="them-btn" href="https://t.me/meydanabekleriz">
+                <a class="them-btn" target="_blank" href="https://t.me/meydanabekleriz">
                   <span class="btn_label" data-text="Telegrama Katıl"
                     >Telegrama Katıl</span
                   >
@@ -260,7 +260,7 @@
                   </span>
                 </a>
                 <a href="/assets/whitepaper/MAT_Token_Whitepaper_v1.1.pdf" class="them-btn btn-transparent">
-                  <span class="btn_label" data-text="Whitepaper'ı Oku"
+                  <span class="btn_label" target="_blank" data-text="Whitepaper'ı Oku"
                     >Whitepaper'ı Oku</span
                   >
                   <span class="btn_icon">
@@ -1394,7 +1394,7 @@ yaparak kazanç elde etmeleri
                       </svg>
                     </span>
                   </a>
-                  <a href="assets/whitepaper/MAT_Token_Whitepaper_v1.1.pdf" class="them-btn btn-transparent" style="min-width: 160px;">
+                  <a target="_blank" href="assets/whitepaper/MAT_Token_Whitepaper_v1.1.pdf" class="them-btn btn-transparent" style="min-width: 160px;">
                     <span class="btn_label" data-text="Whitepaper">Whitepaper</span>
                     <span class="btn_icon">
                       <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
